@@ -1,3 +1,9 @@
+2008-08-27  Emilio Meschi <emilio.meschi@cern.ch>
+
+	* tag V00-25-06
+	* fix to offline2online to avoid null pointer exception when replacing globalTag
+	* fix to parser to bail out if source filesystem becomes inaccessible during parsing
+
 2008-08-13  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-25-05
